# axhello

./: Makefile.am  README.md  _configure  configure.ac
helloworld1/: Makefile.am  atoms.or  code_placement.or  fifos.or  setup.c  states.or
helloworld2/: Makefile.am  atoms.or  code_placement.or  debug.or  fifos.or  setup.h  states.or
helloworld3/: Makefile.am  atoms.or  fifos.or  main.c  setup.c  states.or
